--- a/publication/gohari-2020-blending/index.html
+++ b/publication/gohari-2020-blending/index.html
@@ -987,7 +987,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>arXiv preprint</em></div>
+          <div class="col-12 col-md-9"><em>Accepted at the 2022 American Control Conference (ACC)</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
