update publications + cv and resume

--- a/publication/index.html
+++ b/publication/index.html
@@ -992,7 +992,7 @@
   </span>
   (2021).
   <a href="/publication/physics-informed-nn-architectures/">Neural Networks with Physics-Informed Architectures and Constraints for Dynamical Systems Modeling</a>.
-  <em>In review at L4DC 2022</em>.
+  <em>Accepted at L4DC 2022</em>.
   
   <p>
 
@@ -1089,7 +1089,7 @@
   </span>
   (2021).
   <a href="/publication/learning-to-control-one-trial/">Learning to Reach, Swim, Walk and Fly in One Trial: Data-Driven Control with Scarce Data and Side Information</a>.
-  <em>In review at L4DC 2022</em>.
+  <em>Accepted at L4DC 2022</em>.
   
   <p>
 
@@ -1808,7 +1808,7 @@
   </span>
   (2020).
   <a href="/publication/on-the-fly-control-journal/">On-The-Fly Control of Unknown Systems: From Side Information to Performance Guarantees through Reachability</a>.
-  <em>In review  at IEEE Transactions on Automatic Control</em>.
+  <em>Conditionally accepted  at IEEE Transactions on Automatic Control</em>.
   
   <p>
 
