--- a/publication/on-the-fly-control-journal/index.html
+++ b/publication/on-the-fly-control-journal/index.html
@@ -984,7 +984,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>In review  at IEEE Transactions on Automatic Control</em></div>
+          <div class="col-12 col-md-9"><em>Conditionally accepted  at IEEE Transactions on Automatic Control</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
