--- a/publication/physics-informed-nn-architectures/index.html
+++ b/publication/physics-informed-nn-architectures/index.html
@@ -981,7 +981,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>In review at L4DC 2022</em></div>
+          <div class="col-12 col-md-9"><em>Accepted at L4DC 2022</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
