update papers + cv

--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Fourth-year Ph.D. student in Electrical and Computer Engineering" />
+  <meta name="description" content="Fifth-year Ph.D. student in Electrical and Computer Engineering" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://franckdjeumou.github.io/publication-type/3/" />
@@ -347,7 +347,7 @@
   <meta property="og:site_name" content="Franck Djeumou" />
   <meta property="og:url" content="https://franckdjeumou.github.io/publication-type/3/" />
   <meta property="og:title" content="3 | Franck Djeumou" />
-  <meta property="og:description" content="Fourth-year Ph.D. student in Electrical and Computer Engineering" /><meta property="og:image" content="https://franckdjeumou.github.io/media/logo_hue890125a026c63f2721f3c5c263217e9_157891_300x300_fit_lanczos_3.png" />
+  <meta property="og:description" content="Fifth-year Ph.D. student in Electrical and Computer Engineering" /><meta property="og:image" content="https://franckdjeumou.github.io/media/logo_hue890125a026c63f2721f3c5c263217e9_157891_300x300_fit_lanczos_3.png" />
     <meta property="twitter:image" content="https://franckdjeumou.github.io/media/logo_hue890125a026c63f2721f3c5c263217e9_157891_300x300_fit_lanczos_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -821,7 +821,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/pdf/2007.15755.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://ieeexplore.ieee.org/document/9867486" target="_blank" rel="noopener">
   PDF
 </a>
 
