--- a/publication/gohari-2020-blending/index.html
+++ b/publication/gohari-2020-blending/index.html
@@ -892,7 +892,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/pdf/2007.15755.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://ieeexplore.ieee.org/document/9867486" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -987,7 +987,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Accepted at the 2022 American Control Conference (ACC)</em></div>
+          <div class="col-12 col-md-9"><em>American Control Conference (ACC 2022)</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
@@ -1045,8 +1045,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://franckdjeumou.github.io/">Franck Djeumou</a></h5>
-      <h6 class="card-subtitle">Fourth-year Ph.D. student in Electrical and Computer Engineering</h6>
-      <p class="card-text">My research interests include learning with prior knowledge, safe learning, control theory, optimization, and formal methods.</p>
+      <h6 class="card-subtitle">Fifth-year Ph.D. student in Electrical and Computer Engineering</h6>
+      <p class="card-text">My research interests include learning with prior knowledge, planning under partial observation, safe learning, control theory, optimization, and formal methods.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
