--- a/publication/task-guided-irl-pomdps/index.html
+++ b/publication/task-guided-irl-pomdps/index.html
@@ -884,7 +884,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/pdf/2105.14073.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://ojs.aaai.org/index.php/ICAPS/article/view/19785" target="_blank" rel="noopener">
   PDF
 </a>
 
@@ -980,7 +980,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Accepted at ICAPS 2022</em></div>
+          <div class="col-12 col-md-9"><em>ICAPS 2022</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
@@ -1032,8 +1032,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://franckdjeumou.github.io/">Franck Djeumou</a></h5>
-      <h6 class="card-subtitle">Fourth-year Ph.D. student in Electrical and Computer Engineering</h6>
-      <p class="card-text">My research interests include learning with prior knowledge, safe learning, control theory, optimization, and formal methods.</p>
+      <h6 class="card-subtitle">Fifth-year Ph.D. student in Electrical and Computer Engineering</h6>
+      <p class="card-text">My research interests include learning with prior knowledge, planning under partial observation, safe learning, control theory, optimization, and formal methods.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
