--- a/index.html
+++ b/index.html
@@ -1434,9 +1434,8 @@
 
   <span class="author-highlighted">
       <a href="/author/franck-djeumou/">Franck Djeumou</a></span>, <span >
-      <a href="/author/jonathan-goh/">Jonathan Goh</a></span>, <span >
-      <a href="/author/ufuk-topcu/">Ufuk Topcu</a></span>, <span >
-      <a href="/author/avinash-balachandran/">Avinash Balachandran</a></span>
+      <a href="/author/cyrus-neary/">Cyrus Neary</a></span>, <span >
+      <a href="/author/ufuk-topcu/">Ufuk Topcu</a></span>
   </div>
   
   
