--- a/publication/index.html
+++ b/publication/index.html
@@ -895,9 +895,8 @@
 
   <span class="author-highlighted">
       <a href="/author/franck-djeumou/">Franck Djeumou</a></span>, <span >
-      <a href="/author/jonathan-goh/">Jonathan Goh</a></span>, <span >
-      <a href="/author/ufuk-topcu/">Ufuk Topcu</a></span>, <span >
-      <a href="/author/avinash-balachandran/">Avinash Balachandran</a></span>
+      <a href="/author/cyrus-neary/">Cyrus Neary</a></span>, <span >
+      <a href="/author/ufuk-topcu/">Ufuk Topcu</a></span>
   </span>
   (2023).
   <a href="/publication/neural-sde-models/">How to Learn and Generalize From Three Minutes of Data: Physics-Constrained and Uncertainty-Aware Neural Stochastic Differential Equations</a>.
