--- a/publication/index.html
+++ b/publication/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Fifth-year Ph.D. student in Electrical and Computer Engineering" />
+  <meta name="description" content="Researcher at Toyota Research Institute | Incoming Assistant Professor at Rensselaer Polytechnic Institute" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://franckdjeumou.github.io/publication/" />
@@ -347,7 +347,7 @@
   <meta property="og:site_name" content="Franck Djeumou" />
   <meta property="og:url" content="https://franckdjeumou.github.io/publication/" />
   <meta property="og:title" content="Publications | Franck Djeumou" />
-  <meta property="og:description" content="Fifth-year Ph.D. student in Electrical and Computer Engineering" /><meta property="og:image" content="https://franckdjeumou.github.io/media/logo_hue890125a026c63f2721f3c5c263217e9_157891_300x300_fit_lanczos_3.png" />
+  <meta property="og:description" content="Researcher at Toyota Research Institute | Incoming Assistant Professor at Rensselaer Polytechnic Institute" /><meta property="og:image" content="https://franckdjeumou.github.io/media/logo_hue890125a026c63f2721f3c5c263217e9_157891_300x300_fit_lanczos_3.png" />
     <meta property="twitter:image" content="https://franckdjeumou.github.io/media/logo_hue890125a026c63f2721f3c5c263217e9_157891_300x300_fit_lanczos_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -900,7 +900,7 @@
   </span>
   (2023).
   <a href="/publication/neural-sde-models/">How to Learn and Generalize From Three Minutes of Data: Physics-Constrained and Uncertainty-Aware Neural Stochastic Differential Equations</a>.
-  <em>Initial Submission to CoRL 2023</em>.
+  <em>Oral at CoRL 2023</em>.
   
   <p>
 
