--- a/publication/verginis-2021-safety/index.html
+++ b/publication/verginis-2021-safety/index.html
@@ -1034,8 +1034,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://franckdjeumou.github.io/">Franck Djeumou</a></h5>
-      <h6 class="card-subtitle">Fifth-year Ph.D. student in Electrical and Computer Engineering</h6>
-      <p class="card-text">My research interests include learning with prior knowledge, planning under partial observation, safe learning, control theory, optimization, and formal methods.</p>
+      <h6 class="card-subtitle">Researcher at Toyota Research Institute | Incoming Assistant Professor at Rensselaer Polytechnic Institute</h6>
+      <p class="card-text">My research interests include learning and control with prior knowledge, planning under partial observation, control theory, and formal methods.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
