--- a/publication/neural-sde-models/index.html
+++ b/publication/neural-sde-models/index.html
@@ -985,7 +985,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Initial Submission to CoRL 2023</em></div>
+          <div class="col-12 col-md-9"><em>Oral at CoRL 2023</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
@@ -1037,8 +1037,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://franckdjeumou.github.io/">Franck Djeumou</a></h5>
-      <h6 class="card-subtitle">Fifth-year Ph.D. student in Electrical and Computer Engineering</h6>
-      <p class="card-text">My research interests include learning with prior knowledge, planning under partial observation, safe learning, control theory, optimization, and formal methods.</p>
+      <h6 class="card-subtitle">Researcher at Toyota Research Institute | Incoming Assistant Professor at Rensselaer Polytechnic Institute</h6>
+      <p class="card-text">My research interests include learning and control with prior knowledge, planning under partial observation, control theory, and formal methods.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
